--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,6 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Resource Group'
@@ -21,6 +20,5 @@ steps:
     location: 'South India'
     templateLocation: 'URL of the file'
     csmFileLink: 'https://raw.githubusercontent.com/HarisAbdulkareem/LogicAppConsumption/main/template.json'
-    overrideParameters: '-projectName '''
+    csmParametersFileLink: 'https://raw.githubusercontent.com/HarisAbdulkareem/LogicAppConsumption/main/parameters.json'
     deploymentMode: 'Incremental'
-    deploymentName: 'DeployPipelineTemplate'
